--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,12 +6,27 @@
     "start": "next start"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
+    "@tanstack/react-table": "^8.20.6",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-table-7": "^0.0.1-security",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "engines": {
     "node": ">=18"
+  },
+  "devDependencies": {
+    "@types/node": "22.10.7",
+    "@types/react": "19.0.7",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
+    "typescript": "5.7.3"
   }
 }
