--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
     depends_on:
       - backend
     environment:
-      API_URL: http://backend-api:5000
+      - API_URL=http://backend-api:5000
     expose:
       - 3000
 
